[package]
name = "gazenot"
description = "Gaze Not Into The Abyss, Lest You Become A Release Engineer"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/axodotdev/gazenot"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client_lib"]
client_lib = ["axoasset", "url", "reqwest", "tracing", "tokio", "camino", "axoasset", "backon"]

[dependencies]

# things needed for even the faux-schema mode (--no-default-features)
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
miette = { version = "7.0.0" }
schemars = "0.8.17"

# things needed for the full client
axoasset = { version = ">=0.9.0, <0.10.0", features = ["json-serde"], optional = true }
url = { version = "2.4.1", features = ["serde"], optional = true }
tracing = { version = "0.1.36", features = ["log"], optional = true }
tokio = { version = "1.12.0", features = ["full"], optional = true }
camino = { version = "1.1.6", optional = true }
reqwest = { version = ">= 0.11.0", default-features = false, optional = true, features = [
    "gzip",
    "rustls-tls",
    "json",
]}
backon = { version = "0.4.1", optional = true }
