[package]
name = "gazenot"
description = "Gaze Not Into The Abyss, Lest You Become A Release Engineer"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/axodotdev/gazenot"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client_lib"]
client_lib = ["axoasset", "url", "tracing", "tokio", "camino", "axoasset", "backon"]
tls-native-roots = ["axoasset/tls-native-roots"]

[dependencies]

# things needed for even the faux-schema mode (--no-default-features)
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
miette = { version = "7.2.0" }
schemars = "0.8.11"

# things needed for the full client
axoasset = { version = "1.0.0", features = ["json-serde", "remote"], optional = true }
url = { version = "2.5.0", features = ["serde"], optional = true }
tracing = { version = "0.1.36", features = ["log"], optional = true }
tokio = { version = "1.12.0", features = ["full"], optional = true }
camino = { version = "1.1.6", optional = true }
backon = { version = "0.4.1", optional = true }

[lints.clippy]
result_large_err = "allow"
